Fix some overflow scroll bugs

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -16,6 +16,7 @@
     visibility: hidden
     position: absolute
     height: 0
+    overflow: hidden
     
   > div.active
   > div:target
